--- a/test-output/SparkReport 23-Sep-22 14-36-50/Report/spark.html
+++ b/test-output/SparkReport 23-Sep-22 14-36-50/Report/spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 22, 2022 07:55:37 PM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 23, 2022 02:36:50 PM</span></a>
 </li>
 </ul>
 </div>
@@ -45,6 +45,11 @@
 <li class="nav-item dropdown" onclick="toggleView('test-view')">
 <a id="nav-test" class="dropdown-toggle" href="#">
 <span class="ico"><i class="fa fa-list"></i></span>
+</a>
+</li>
+<li class="nav-item dropdown" onclick="toggleView('exception-view')">
+<a id="nav-exception" class="dropdown-toggle" href="#">
+<span class="ico"><i class="fa fa-bug"></i></span>
 </a>
 </li>
 <li class="nav-item dropdown" onclick="toggleView('category-view')">
@@ -72,6 +77,7 @@
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
 <a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
+<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -85,25 +91,25 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="fail" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Customer</p>
             <p class="text-sm">
-              <span>7:55:38 PM</span> / <span>00:01:04:572</span>
-              <span class="badge pass-bg log float-right">Pass</span>
+              <span>2:36:51 PM</span> / <span>00:01:44:613</span>
+              <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Customer</h5>
-<span class='badge badge-success'>09.22.2022 7:55:38 PM</span>
-<span class='badge badge-danger'>09.22.2022 7:56:43 PM</span>
-<span class='badge badge-default'>00:01:04:572</span>
+<h5 class="test-status text-fail">Customer</h5>
+<span class='badge badge-success'>09.23.2022 2:36:51 PM</span>
+<span class='badge badge-danger'>09.23.2022 2:38:35 PM</span>
+<span class='badge badge-default'>00:01:44:613</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -257,10 +263,13 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="56"><span class="badge log pass-bg mr-2">Pass</span>Search Customer by Name</div>
+        <div class="node" id="56"><span class="badge log fail-bg mr-2">Fail</span>Search Customer by Name</div>
+          <div class="status-avatar float-right mr-4">
+            <i class="fa fa-paperclip"></i>
+          </div>
       </div>
     </div>
-        <div class="collapse">
+        <div class="">
           <div class="card-body">
               <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.user_launch_chrome_browser()">
                 <span>Given User Launch Chrome browser</span>
@@ -272,54 +281,98 @@
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.user_enters_email_as_and_password_as(java.lang.String,java.lang.String)">
+              <div class="step fail-bg" title="MyStepdefinitions.MyStepDef.user_enters_email_as_and_password_as(java.lang.String,java.lang.String)">
                 <span>And User enters Email as "admin@yourstore.com" and Password as "admin"</span>
       <div>
+        <textarea disabled class="code-block">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"css selector","selector":"#Email"}
+  (Session info: chrome=105.0.5195.127)
+For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
+Build info: version: '4.2.1', revision: 'ac4d0fdd4a'
+System info: host: 'ILD-PUN-LAP-337', ip: '192.168.0.102', os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.4.1'
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [fbc55e702c57ef104ea258ffcf34cbf9, findElement {using=id, value=Email}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 105.0.5195.127, chrome: {chromedriverVersion: 105.0.5195.52 (412c95e51883..., userDataDir: C:\Users\Mahesh\AppData\Loc...}, goog:chromeOptions: {debuggerAddress: localhost:49949}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:49949/devtoo..., se:cdpVersion: 105.0.5195.127, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: fbc55e702c57ef104ea258ffcf34cbf9
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:551)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:66)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:369)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
+	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
+	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
+	at jdk.proxy2/jdk.proxy2.$Proxy46.clear(Unknown Source)
+	at PageObjects.MyLoginPage.enterEmail(MyLoginPage.java:42)
+	at MyStepdefinitions.MyStepDef.user_enters_email_as_and_password_as(MyStepDef.java:104)
+	at ✽.User enters Email as "admin@yourstore.com" and Password as "admin"(file:///C:/Users/Mahesh/eclipse-workspace/MyLatestIlinkFramework/./Features/Customers.feature:37)
+</textarea>
+      
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.click_on_login()">
+              <div class="step pass-bg" title="AFTER_STEP">
+                <span>MyStepdefinitions.MyStepDef.addScreenshot(io.cucumber.java.Scenario)</span>
+      <div>Search Customer by Name
+          <div class="row mb-3"><div class="col-md-3">
+<img data-featherlight='../Screenshots/embedded1.png' src="../Screenshots/embedded1.png">
+    
+    </div></div>
+</div>
+      <div>
+      </div>
+              </div>
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.click_on_login()">
                 <span>And Click on Login</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.user_can_view_dashboad()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.user_can_view_dashboad()">
                 <span>Then User can view Dashboad</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.user_click_on_customers_menu()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.user_click_on_customers_menu()">
                 <span>When User click on customers Menu</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.click_on_customers_menu_item()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.click_on_customers_menu_item()">
                 <span>And click on customers Menu Item</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.enter_customer_first_name()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.enter_customer_first_name()">
                 <span>And Enter customer FirstName</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.enter_customer_last_name()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.enter_customer_last_name()">
                 <span>And Enter customer LastName</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.click_on_search_button()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.click_on_search_button()">
                 <span>When Click on search button</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.MyStepDef.user_should_found_name_in_the_search_table()">
+              <div class="step skip-bg" title="MyStepdefinitions.MyStepDef.user_should_found_name_in_the_search_table()">
                 <span>Then User should found Name in the Search table</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
-              <div class="step pass-bg" title="MyStepdefinitions.Close.close_browser()">
+              <div class="step skip-bg" title="MyStepdefinitions.Close.close_browser()">
                 <span>And close browser</span>
-      <div>
+      <div>Step skipped
       </div>
               </div>
           </div>
@@ -335,7 +388,7 @@
           <div class="test-detail">
             <p class="name">Login</p>
             <p class="text-sm">
-              <span>7:56:43 PM</span> / <span>00:00:34:068</span>
+              <span>2:38:35 PM</span> / <span>00:00:30:797</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -344,9 +397,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login</h5>
-<span class='badge badge-success'>09.22.2022 7:56:43 PM</span>
-<span class='badge badge-danger'>09.22.2022 7:57:17 PM</span>
-<span class='badge badge-default'>00:00:34:068</span>
+<span class='badge badge-success'>09.23.2022 2:38:35 PM</span>
+<span class='badge badge-danger'>09.23.2022 2:39:06 PM</span>
+<span class='badge badge-default'>00:00:30:797</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=83</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -476,7 +529,59 @@
 </div>
 <div class="test-content-detail"><div class="detail-body"></div></div>
 </div></div>
-<div class="test-wrapper row view category-view attributes-view">
+<div class="test-wrapper row view exception-view attributes-view">
+<div class="test-list">
+<div class="test-list-tools">
+<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+</div>
+<div class="test-list-wrapper scrollable">
+<ul class="test-list-item">
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log badge-danger'>1</span>
+</span>
+<p class="name">org.openqa.selenium.NoSuchElementException</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>org.openqa.selenium.NoSuchElementException</h4>
+<span status="fail" class='badge log badge-danger'>1 failed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>14:38:32 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='62'>And User enters Email as "admin@yourstore.com" and Password as "admin"</a>
+<div class="">
+<span class="badge badge-default">Customer.Search Customer by Name.And User enters Email as "admin@yourstore.com" and Password as "admin"</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="test-content scrollable">
+<div class="test-content-detail">
+<div class="detail-body"></div>
+</div>
+</div>
+</div><div class="test-wrapper row view category-view attributes-view">
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
@@ -487,7 +592,8 @@
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>4</span>
+<span class='badge log pass-bg'>3</span>
+<span class='badge log badge-danger'>1</span>
 </span>
 <p class="name">@regression</p>
 <p class="duration text-sm">4 tests</p>
@@ -495,7 +601,8 @@
 <div class="test-contents d-none">
 <div class="info">
 <h4>@regression</h4>
-<span status="pass" class='badge log pass-bg'>4 passed</span>
+<span status="pass" class='badge log pass-bg'>3 passed</span>
+<span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -508,7 +615,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>19:56:01 PM</td>
+<td>14:37:11 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='31'>Search Customer by Email</a>
 <div class="">
@@ -516,9 +623,9 @@
 </div>
 </td>
 </tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>19:56:22 PM</td>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>14:37:59 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='56'>Search Customer by Name</a>
 <div class="">
@@ -528,7 +635,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>19:57:00 PM</td>
+<td>14:38:51 PM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='103'>Successful Login with Valid Credentials DDT</a>
 <div class="">
@@ -538,7 +645,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>19:57:00 PM</td>
+<td>14:38:51 PM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='104'>Successful Login with Valid Credentials DDT</a>
 <div class="">
@@ -574,7 +681,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>19:55:38 PM</td>
+<td>14:36:51 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Add New Customer</a>
 <div class="">
@@ -584,7 +691,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>19:56:43 PM</td>
+<td>14:38:35 PM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='84'>Successful Login with Valid Credentials</a>
 <div class="">
@@ -609,25 +716,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 22, 2022 07:55:37 PM</h3>
+<h3>Sep 23, 2022 02:36:50 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 22, 2022 07:57:17 PM</h3>
+<h3>Sep 23, 2022 02:39:06 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>2</h3>
+<h3>1</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 </div>
@@ -643,12 +750,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'>
-<b>2</b> features passed
+<div><small data-tooltip='50%'>
+<b>1</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='0%'><b>0</b> features failed,
+<small data-tooltip='50%'><b>1</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -666,9 +773,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>5</b> scenarios passed</small></div>
+<div><small data-tooltip='80%'><b>4</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> scenarios failed,
+<small data-tooltip='20%'><b>1</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -686,10 +793,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>52</b> steps passed</small></div>
+<div><small data-tooltip='81%'><b>43</b> steps passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> steps failed,
-<b>0</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='1%'><b>1</b> steps failed,
+<b>9</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -705,7 +812,7 @@
 </div></div>
 <script>
 var timeline = {
-"Customer":64.572,"Login":34.068
+"Customer":104.613,"Login":30.797
 };
 </script>
 <div class="row">
@@ -716,11 +823,11 @@ var timeline = {
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
 <td>@regression</td>
-<td>4</td>
+<td>3</td>
+<td>1</td>
 <td>0</td>
 <td>0</td>
-<td>0</td>
-<td>100%</td>
+<td>75%</td>
 </tr>
 <tr>
 <td>@Sanity</td>
@@ -761,21 +868,21 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 2,
-failParent: 0,
+passParent: 1,
+failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 5,
-failChild: 0,
+passChild: 4,
+failChild: 1,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 52,
-failGrandChild: 0,
+passGrandChild: 43,
+failGrandChild: 1,
 warningGrandChild: 0,
-skipGrandChild: 0,
+skipGrandChild: 9,
 infoGrandChild: 0,
 eventsCount: 5,
 };
