--- a/test-output/SparkReport 23-Sep-22 14-39-55/Report/spark.html
+++ b/test-output/SparkReport 23-Sep-22 14-39-55/Report/spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 19, 2022 12:05:32 AM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 23, 2022 02:39:55 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,7 +79,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@Sanity</a><a class="dropdown-item" href="#">@regression</a>
+<a class="dropdown-item" href="#">@regression</a><a class="dropdown-item" href="#">@Sanity</a>
 </ul>
 </li>
 </ul>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Customer</p>
             <p class="text-sm">
-              <span>12:05:33 AM</span> / <span>00:01:05:968</span>
+              <span>2:39:56 PM</span> / <span>00:00:51:365</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Customer</h5>
-<span class='badge badge-success'>09.19.2022 12:05:33 AM</span>
-<span class='badge badge-danger'>09.19.2022 12:06:38 AM</span>
-<span class='badge badge-default'>00:01:05:968</span>
+<span class='badge badge-success'>09.23.2022 2:39:56 PM</span>
+<span class='badge badge-danger'>09.23.2022 2:40:47 PM</span>
+<span class='badge badge-default'>00:00:51:365</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -335,7 +335,7 @@
           <div class="test-detail">
             <p class="name">Login</p>
             <p class="text-sm">
-              <span>12:06:39 AM</span> / <span>00:01:03:875</span>
+              <span>2:40:47 PM</span> / <span>00:00:28:384</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -344,9 +344,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login</h5>
-<span class='badge badge-success'>09.19.2022 12:06:39 AM</span>
-<span class='badge badge-danger'>09.19.2022 12:07:42 AM</span>
-<span class='badge badge-default'>00:01:03:875</span>
+<span class='badge badge-success'>09.23.2022 2:40:47 PM</span>
+<span class='badge badge-danger'>09.23.2022 2:41:16 PM</span>
+<span class='badge badge-default'>00:00:28:384</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=83</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -487,52 +487,6 @@
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>2</span>
-</span>
-<p class="name">@Sanity</p>
-<p class="duration text-sm">2 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>@Sanity</h4>
-<span status="pass" class='badge log pass-bg'>2 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>00:05:33 AM</td>
-<td>
-<a href="#" class="linked" test-id='1' id='2'>Add New Customer</a>
-<div class="">
-<span class="badge badge-default">Customer.Add New Customer</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>00:06:39 AM</td>
-<td>
-<a href="#" class="linked" test-id='83' id='84'>Successful Login with Valid Credentials</a>
-<div class="">
-<span class="badge badge-default">Login.Successful Login with Valid Credentials</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
 <span class='badge log pass-bg'>4</span>
 </span>
 <p class="name">@regression</p>
@@ -554,7 +508,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:05:58 AM</td>
+<td>14:40:15 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='31'>Search Customer by Email</a>
 <div class="">
@@ -564,7 +518,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:06:18 AM</td>
+<td>14:40:32 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='56'>Search Customer by Name</a>
 <div class="">
@@ -574,7 +528,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:07:08 AM</td>
+<td>14:41:03 PM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='103'>Successful Login with Valid Credentials DDT</a>
 <div class="">
@@ -584,11 +538,57 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:07:08 AM</td>
+<td>14:41:03 PM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='104'>Successful Login with Valid Credentials DDT</a>
 <div class="">
 <span class="badge badge-default">Login.Successful Login with Valid Credentials DDT</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>2</span>
+</span>
+<p class="name">@Sanity</p>
+<p class="duration text-sm">2 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@Sanity</h4>
+<span status="pass" class='badge log pass-bg'>2 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>14:39:56 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='2'>Add New Customer</a>
+<div class="">
+<span class="badge badge-default">Customer.Add New Customer</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>14:40:47 PM</td>
+<td>
+<a href="#" class="linked" test-id='83' id='84'>Successful Login with Valid Credentials</a>
+<div class="">
+<span class="badge badge-default">Login.Successful Login with Valid Credentials</span>
 </div>
 </td>
 </tr>
@@ -609,13 +609,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 19, 2022 12:05:32 AM</h3>
+<h3>Sep 23, 2022 02:39:55 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 19, 2022 12:07:42 AM</h3>
+<h3>Sep 23, 2022 02:41:16 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -705,7 +705,7 @@
 </div></div>
 <script>
 var timeline = {
-"Customer":65.968,"Login":63.875
+"Customer":51.365,"Login":28.384
 };
 </script>
 <div class="row">
@@ -715,16 +715,16 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@Sanity</td>
-<td>2</td>
+<td>@regression</td>
+<td>4</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
 </tr>
 <tr>
-<td>@regression</td>
-<td>4</td>
+<td>@Sanity</td>
+<td>2</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
