--- a/test-output/SparkReport 24-Sep-22 09-34-22/Report/spark.html
+++ b/test-output/SparkReport 24-Sep-22 09-34-22/Report/spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 22, 2022 04:34:17 PM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 24, 2022 09:34:22 AM</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Customer</p>
             <p class="text-sm">
-              <span>4:34:17 PM</span> / <span>00:01:02:946</span>
+              <span>9:34:22 AM</span> / <span>00:01:10:680</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Customer</h5>
-<span class='badge badge-success'>09.22.2022 4:34:17 PM</span>
-<span class='badge badge-danger'>09.22.2022 4:35:20 PM</span>
-<span class='badge badge-default'>00:01:02:946</span>
+<span class='badge badge-success'>09.24.2022 9:34:22 AM</span>
+<span class='badge badge-danger'>09.24.2022 9:35:33 AM</span>
+<span class='badge badge-default'>00:01:10:680</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -335,7 +335,7 @@
           <div class="test-detail">
             <p class="name">Login</p>
             <p class="text-sm">
-              <span>4:35:20 PM</span> / <span>00:00:33:656</span>
+              <span>9:35:33 AM</span> / <span>00:00:32:689</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -344,9 +344,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login</h5>
-<span class='badge badge-success'>09.22.2022 4:35:20 PM</span>
-<span class='badge badge-danger'>09.22.2022 4:35:54 PM</span>
-<span class='badge badge-default'>00:00:33:656</span>
+<span class='badge badge-success'>09.24.2022 9:35:33 AM</span>
+<span class='badge badge-danger'>09.24.2022 9:36:06 AM</span>
+<span class='badge badge-default'>00:00:32:689</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=83</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -508,7 +508,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:34:42 PM</td>
+<td>09:35:01 AM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='31'>Search Customer by Email</a>
 <div class="">
@@ -518,7 +518,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:35:01 PM</td>
+<td>09:35:18 AM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='56'>Search Customer by Name</a>
 <div class="">
@@ -528,7 +528,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:35:37 PM</td>
+<td>09:35:50 AM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='103'>Successful Login with Valid Credentials DDT</a>
 <div class="">
@@ -538,7 +538,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:35:37 PM</td>
+<td>09:35:50 AM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='104'>Successful Login with Valid Credentials DDT</a>
 <div class="">
@@ -574,7 +574,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:34:17 PM</td>
+<td>09:34:22 AM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Add New Customer</a>
 <div class="">
@@ -584,7 +584,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:35:20 PM</td>
+<td>09:35:33 AM</td>
 <td>
 <a href="#" class="linked" test-id='83' id='84'>Successful Login with Valid Credentials</a>
 <div class="">
@@ -609,13 +609,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 22, 2022 04:34:17 PM</h3>
+<h3>Sep 24, 2022 09:34:22 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 22, 2022 04:35:54 PM</h3>
+<h3>Sep 24, 2022 09:36:06 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -705,7 +705,7 @@
 </div></div>
 <script>
 var timeline = {
-"Customer":62.946,"Login":33.656
+"Customer":70.68,"Login":32.689
 };
 </script>
 <div class="row">
