--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:55:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1810899357</td>   <td></td> </tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:57:00</td>   <td>83293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">runScenario</td> 
-  <td>main@1810899357</td>   <td></td> </tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:57:00</td>   <td>83293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">runScenario</td> 
-  <td>main@1810899357</td>   <td></td> </tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:57:17</td>   <td>99682</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1810899357</td>   <td></td> </tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:57:00</td>   <td>83293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">runScenario</td> 
-  <td>main@1810899357</td>   <td></td> </tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:57:00</td>   <td>83293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">runScenario</td> 
-  <td>main@1810899357</td>   <td></td> </tr>
-<tr bgcolor="686bba">  <td>22/09/22 19:57:00</td>   <td>83293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@ba2f4ec]">runScenario</td> 
-  <td>main@1810899357</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:57:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">runScenario</td> 
+  <td>main@925308434</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:57:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">runScenario</td> 
+  <td>main@925308434</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:56:15</td>   <td>-87889</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925308434</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:57:59</td>   <td>16029</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925308434</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:57:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">runScenario</td> 
+  <td>main@925308434</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:57:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">runScenario</td> 
+  <td>main@925308434</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>22/09/26 13:57:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:MyTestRunner.MyRun@5b7a5baa]">runScenario</td> 
+  <td>main@925308434</td>   <td></td> </tr>
 </table>
